--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 <body>
     <!---Header, navigation, mail, phone-->
     <header>
-    <nav>
-        <a href="/">
-        <img src="./img/logo.svg" alt="Logo">
-        </a>
+        <hr>
+        <nav>
+            <a lang="en" href="/">
+                <span>Web</span><span>Studio</span>
+            </a>
+            <ul>
+                <li><a href="/">Студия</a></li>
+                <li><a href="/">Портфолио</a></li>
+                <li><a href="/">Контакты</a></li>
+            </ul>
+        </nav>
         <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
     </header>
     <main>
-        <!---The hat-->
+        <!---Hero-->
         <div>
             <section>
                 <h1>Эффективные решения <br> для вашего бизнеса</h1>
-                <a type="button">Заказать услугу</a>
+                <button type="button">Заказать услугу</button>
             </section>
         </div>
         <!---Features-->
         <div>
             <section>
-                <h2>Особенности</h2>
+                <h2 hidden>Особенности</h2>
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
@@ -68,9 +69,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/img1.jpg" alt="изображение1"width="294"></li>
-                <li><img src="./img/img2.jpg" alt="изображение2"width="294"></li>
-                <li><img src="./img/img3.jpg" alt="изображение3"width="294"></li>
+                <li><img src="./img/thejob/coding.jpg" alt="фулстек разработка" width="370" height="294"></li>
+                <li><img src="./img/thejob/application.jpg" alt="разработка приложений" width="370" height="294"></li>
+                <li><img src="./img/thejob/design.jpg" alt="дизайн" width="370" height="294"></li>
             </ul>
         </section>
         <!---The team-->
@@ -78,28 +79,28 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/igor.jpg" alt="Игорь Демьяненко" width="260">
+                    <img src="./img/theteam/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>
                         Product Designer
                     </p>
                 </li>
                 <li>
-                    <img src="./img/olga.jpg" alt="Ольга Репина" width="260">
+                    <img src="./img/theteam/olga.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>
                         Frontend Developer
                     </p>
                 </li>
                 <li>
-                    <img src="./img/nikolay.jpg" alt="Николай Тарасов" width="260">
+                    <img src="./img/theteam/nikolay.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>
                         Marketing
                     </p>
                 </li>
                 <li>
-                    <img src="./img/mihail.jpg" alt="Михаил Ермаков" width="260">
+                    <img src="./img/theteam/mihail.jpg" alt="Михаил Ермаков" width="260">
                     <h3>Михаил Ермаков</h3>
                     <p>
                         UI Designer
@@ -108,5 +109,23 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <a lang="en" href="/">
+            <span>Web</span><span>Studio</span>
+        </a>
+        <address>
+            <ul>
+                <li>
+                    <a href="/">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a href="href="tel:+380991111111>+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
