--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <!---Header, navigation, mail, phone-->
     <header>
-        <hr>
         <nav>
             <a lang="en" href="/">
                 <span>Web</span><span>Studio</span>
@@ -29,7 +28,7 @@
         <!---Hero-->
         <div>
             <section>
-                <h1>Эффективные решения <br> для вашего бизнеса</h1>
+                <h1>Эффективные решения<br>для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
         </div>
@@ -69,9 +68,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/thejob/coding.jpg" alt="фулстек разработка" width="370" height="294"></li>
-                <li><img src="./img/thejob/application.jpg" alt="разработка приложений" width="370" height="294"></li>
-                <li><img src="./img/thejob/design.jpg" alt="дизайн" width="370" height="294"></li>
+                <li><img src="./images/thejob/coding.jpg" alt="фулстек разработка" width="370" height="294"></li>
+                <li><img src="./images/thejob/application.jpg" alt="разработка приложений" width="370" height="294"></li>
+                <li><img src="./images/thejob/design.jpg" alt="дизайн" width="370" height="294"></li>
             </ul>
         </section>
         <!---The team-->
@@ -79,28 +78,28 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/theteam/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <img src="./images/theteam/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>
                         Product Designer
                     </p>
                 </li>
                 <li>
-                    <img src="./img/theteam/olga.jpg" alt="Ольга Репина" width="270" height="260">
+                    <img src="./images/theteam/olga.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>
                         Frontend Developer
                     </p>
                 </li>
                 <li>
-                    <img src="./img/theteam/nikolay.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <img src="./images/theteam/nikolay.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>
                         Marketing
                     </p>
                 </li>
                 <li>
-                    <img src="./img/theteam/mihail.jpg" alt="Михаил Ермаков" width="260">
+                    <img src="./images/theteam/mihail.jpg" alt="Михаил Ермаков" width="260">
                     <h3>Михаил Ермаков</h3>
                     <p>
                         UI Designer
