--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <a href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
-                    <a href="href="tel:+380991111111>+38 099 111 11 11</a>
+                    <a href="href=tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
