--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             </ul>
         </section>
     </main>
+    <!---Footer-->
     <footer>
         <a lang="en" href="/">
             <span>Web</span><span>Studio</span>
