added address, target blank, noopener noreferrer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <address>
             <ul>
                 <li>
-                    <a href="/">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/2G7X5ujzZRcChYin7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
